Editor: fix wrapping issue in version picker

--- a/app/stylesheets/builtin-pages/components/editor/sidebar.less
+++ b/app/stylesheets/builtin-pages/components/editor/sidebar.less
@@ -90,6 +90,7 @@
       line-height: 22px;
       font-size: 13px;
       border: 0;
+      white-space: nowrap;
 
       &:hover {
         color: @blue;
